# ChangeLog for dev-perl/mogilefs-server
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/mogilefs-server/ChangeLog,v 1.25 2011/10/29 23:48:44 robbat2 Exp $

*mogilefs-server-2.540.0 (29 Oct 2011)

  29 Oct 2011; Robin H. Johnson <robbat2@gentoo.org>
  +mogilefs-server-2.540.0.ebuild:
  Version bump.

*mogilefs-server-2.530.0 (01 Sep 2011)

  01 Sep 2011; Torsten Veller <tove@gentoo.org>
  +mogilefs-server-2.530.0.ebuild:
  Change version scheme

*mogilefs-server-2.53 (12 Aug 2011)

  12 Aug 2011; Robin H. Johnson <robbat2@gentoo.org>
  +mogilefs-server-2.53.ebuild:
  Version bump. Contains a critical fix for any users of 2.50-2.52.

*mogilefs-server-2.51 (27 Jun 2011)

  27 Jun 2011; Robin H. Johnson <robbat2@gentoo.org>
  +mogilefs-server-2.51.ebuild:
  Version bump.

*mogilefs-server-2.50 (16 Jun 2011)

  16 Jun 2011; Robin H. Johnson <robbat2@gentoo.org>
  +files/mogautomount-init.d-2.50, +files/mogstored-init.d-2.50,
  +mogilefs-server-2.50.ebuild:
  Version bump.

  19 Apr 2011; Robin H. Johnson <robbat2@gentoo.org>
  mogilefs-server-2.46.ebuild:
  Upstream notes that Perlbal 1.74 leaks memory badly and that was fixed in
  1.76, so lets bump the dep.

*mogilefs-server-2.46 (14 Jan 2011)

  14 Jan 2011; Robin H. Johnson <robbat2@gentoo.org>
  +mogilefs-server-2.46.ebuild:
  Version bump.

*mogilefs-server-2.43 (29 Oct 2010)

  29 Oct 2010; Robin H. Johnson <robbat2@gentoo.org>
  +mogilefs-server-2.43.ebuild:
  Version bump via perl-bump experimental tool.

  29 Oct 2010; Robin H. Johnson <robbat2@gentoo.org>
  -mogilefs-server-2.30.ebuild,
  -files/mogilefs-server-2.30-pidfile-etc.patch,
  -mogilefs-server-2.32.ebuild, -mogilefs-server-2.33.ebuild,
  -mogilefs-server-2.33-r1.ebuild, -mogilefs-server-2.34.ebuild,
  -mogilefs-server-2.35.ebuild, -mogilefs-server-2.36.ebuild,
  mogilefs-server-2.37.ebuild:
  Trim old ebuilds and cleanup, also prepare for upstream distfile rename.
