@@ -12,6 +12,7 @@ DIST MogileFS-Server-2.50.tar.gz 278807 RMD160 864950ff82ee3c650192c15314a778944
 DIST MogileFS-Server-2.51.tar.gz 279038 RMD160 657d2b4c1f9c5491a2c488ed875b5f4475b970d1 SHA1 c0f3dd91f057fb8987b7f95557528b96de3b4375 SHA256 8b02b5cd6760495c00bacd09bba77223d92a32bfa03d3e3db7c097ed623a844a
 DIST MogileFS-Server-2.53.tar.gz 277664 RMD160 ae0ce3b1637996c3b5742f4ead390e82be87f00c SHA1 b8f5be66b7ad6f047ac5771884ee5f44fa76092e SHA256 e2e451efe4bad5cca4e0715883198bfcff0a1bec0655248bcadba50ff3722c21
 DIST MogileFS-Server-2.54.tar.gz 278578 RMD160 59de5f1c9142b7c01a3f2c662c1eeacf82bf94ea SHA1 1219d845de6bd8bd608f26ee97d761b4bab9afeb SHA256 1ba639d82da72390576f4c13d64bd9843fd2ddbd09e2275a5c670ba97e392e33
+DIST MogileFS-Server-2.55.tar.gz 278915 RMD160 7a5c95b5adc59b9c7bf4550ce135bec1425ed53e SHA1 f916538496e71c085c93a418d858fe148e2db8ab SHA256 479e4b36f0ca1aa54a3ab482ee89c34a65d3323575929e287d1b21c531b1715c
 DIST mogilefs-server-2.37.tar.gz 267909 RMD160 a6e25bb945770bb6a1d395620a277b7798c77b39 SHA1 d4b0f4177e6401bab6676725edaad66baea47d3a SHA256 1fcac070057c54599b99c2836b5ff157fd8433a1315363949b2f0d601c114ca6
 EBUILD mogilefs-server-2.37.ebuild 2708 RMD160 25f689220426676e78c7ee9add40f02987bc24a2 SHA1 0be52bf9c5f8f51084b69d4a17e65ed5e585747c SHA256 d2db0335e9e82768268267b7d8f0189fb616c1b14da1a7fd2d2c1a075b1a1fd1
 EBUILD mogilefs-server-2.43.ebuild 2731 RMD160 28b10483cb2b8a84be65126b2b8ceecea0675d77 SHA1 c578412b63b5bd2d940174a758f90cb56da733d7 SHA256 eec898a602986da75daf227f3f3c24715e60f0bf2a1496626b2acff1bd1baa91
@@ -21,5 +22,6 @@ EBUILD mogilefs-server-2.51.ebuild 2795 RMD160 b833df8ad7220af1868936a60a0a964e3
 EBUILD mogilefs-server-2.53.ebuild 2795 RMD160 fe03f1a353f23c5809e98b6352dadee4ffe2f32f SHA1 12cd3fc15716749373920b4a96ebe14117f496ba SHA256 3e18102dc2038ffcc2f69d9698254a694cc215633ac95a2423c6cc3359f66bf6
 EBUILD mogilefs-server-2.530.0.ebuild 2734 RMD160 e9622dfbb4444c38eba1a7455cdc4cda7ec4d3c1 SHA1 29ea3d54a1137c97b9a19f2c23b6f2f25894f232 SHA256 8ab59c7ed76c1d707db641636cdf83b37c97f7dd897f3d6e735e557de907fb79
 EBUILD mogilefs-server-2.540.0.ebuild 2737 RMD160 17556f15bac453de9b4c43695878b3c2db82d461 SHA1 b53942f7c6d87c18bb640f33a312e58d55e10a53 SHA256 993a151a4b0d31e66700e19957f16f1ef8441b10cbdb5610a36f0f3700c12aec
-MISC ChangeLog 5255 RMD160 9847a5b6150154a8f9d24de6510f177cce13a24e SHA1 658f79d8771202c7ee227e4e300227eeab4bf3ac SHA256 9a0663369c7551fef6a707efac6853e4d13acc13b00b3e28ab28ae8e063a5806
+EBUILD mogilefs-server-2.550.0.ebuild 2742 RMD160 d30371f75bb425a5c33d009ddfdd311c25171fd7 SHA1 8238dcab36351767a588a9d2c58975611d6aea09 SHA256 b443ea92589e53101bb7f77ea8124ad5e832f842d1e8a4eb76c57a2c51d2ce88
+MISC ChangeLog 5400 RMD160 ad0226feda98361ee24c22cbbc7fce423b08c512 SHA1 5054064fc4df90ee4d54036b040a348ddb3ff354 SHA256 24801bbe773566353c237790e6fc86fcf576f50138c53634299d49ca4840d4c2
 MISC metadata.xml 360 RMD160 568953ab03aca03d45b075964d64bc3e7f84ce11 SHA1 594ff363b874c45ddfe14d7cf2622cd673542fbd SHA256 1432299bb530a599be0ba29834970720d0baec31e47b06a2ded155253f5f0603
