@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/mogilefs-server
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/mogilefs-server/ChangeLog,v 1.25 2011/10/29 23:48:44 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/mogilefs-server/ChangeLog,v 1.26 2011/11/14 23:45:51 robbat2 Exp $
+
+*mogilefs-server-2.550.0 (14 Nov 2011)
+
+  14 Nov 2011; Robin H. Johnson <robbat2@gentoo.org>
+  +mogilefs-server-2.550.0.ebuild:
+  Version bump.
 
 *mogilefs-server-2.540.0 (29 Oct 2011)
 
